--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
         <ul class="social-icons">
           <li><a class="facebook" href="https://www.instagram.com/i_am_nova_ayesha/"><i class="fa fa-facebook"></i></a></li>
           <li><a class="twitter" href="https://twitter.com/AyeshaNusrat5/"><i class="fa fa-twitter"></i></a></li>
-          <li><a class="dribbble" href="http://ayeshanova.blogspot.com/"><i class="fa fa-youtube"></i></a></li>
+          <li><a class="youtube" href="http://ayeshanova.blogspot.com/"><i class="fa fa-youtube"></i></a></li>
           <li><a class="linkedin" href="https://www.linkedin.com/in/ayesha-nusrat-1447191b1/"><i class="fa fa-linkedin"></i></a></li>   
         </ul>
       </div>
